@@ -444,6 +444,7 @@ AC_OUTPUT(
  languages/italian/Makefile
  languages/portuguese/Makefile
  languages/spanish/Makefile
+ languages/swedish/Makefile
  languages/porter/Makefile
  matcher/Makefile
  api/Makefile
